# ForgePulse

./: .gitignore  Cargo.toml  README.md  run-forgepulse.bat
crates/forge-analysis/: Cargo.toml
crates/forge-analysis/src/: lib.rs
crates/forge-automation/: Cargo.toml
crates/forge-automation/src/: lib.rs
crates/forge-benchmark/: Cargo.toml
crates/forge-benchmark/src/: lib.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  error.rs  ipc.rs  lib.rs  metrics.rs  safety.rs
crates/forge-events/: Cargo.toml
crates/forge-events/src/: lib.rs
crates/forge-experiments/: Cargo.toml
crates/forge-experiments/src/: lib.rs
crates/forge-export/: Cargo.toml
crates/forge-export/src/: lib.rs
crates/forge-hardware/: Cargo.toml
crates/forge-hardware/src/: lib.rs
crates/forge-monitor/: Cargo.toml
crates/forge-monitor/src/: lib.rs
crates/forge-network/: Cargo.toml
crates/forge-network/src/: lib.rs
crates/forge-profiles/: Cargo.toml
crates/forge-profiles/src/: lib.rs
crates/forge-security/: Cargo.toml
crates/forge-security/src/: authentication.rs  client.rs  framing.rs  lib.rs  protected.rs
crates/forge-service/: Cargo.toml
crates/forge-service/src/: lib.rs  main.rs
crates/forge-storage/: Cargo.toml
crates/forge-storage/migrations/: 0001_initial.sql
crates/forge-storage/src/: lib.rs
crates/forge-windows/: Cargo.toml
crates/forge-windows/src/: collector.rs  lib.rs
docs/: ARCHITECTURE.md  DATA_STORAGE.md  FOUNDATION_STATUS.md  IMPLEMENTATION_STATUS.md  PRIVACY.md  THREAT_MODEL.md
forge-ui/: index.html  package-lock.json  package.json  vite.config.ts
forge-ui/src/: main.tsx  styles.css  types.ts
forge-ui/src-tauri/: Cargo.toml  tauri.conf.json
forge-ui/src-tauri/capabilities/: default.json
forge-ui/src-tauri/src/: main.rs
