[package]
name = "forge-monitor"
description = "Collector contracts and adaptive sampling for ForgePulse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
forge-core = { path = "../forge-core" }
serde.workspace = true

[lints]
workspace = true

