[package]
name = "forge-profiles"
description = "Application profile definitions for ForgePulse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true

