[package]
name = "forge-security"
description = "IPC authentication and action safety controls for ForgePulse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
forge-core = { path = "../forge-core" }
getrandom.workspace = true
hmac.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
