[package]
name = "forge-service"
description = "ForgePulse background collection and privileged-operation host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
forge-core = { path = "../forge-core" }
forge-monitor = { path = "../forge-monitor" }
forge-security = { path = "../forge-security" }
forge-storage = { path = "../forge-storage" }
forge-windows = { path = "../forge-windows" }
parking_lot.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows.workspace = true
windows-service.workspace = true

[lints]
workspace = true
