[package]
name = "forge-storage"
description = "SQLite persistence and compressed time-series storage for ForgePulse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
forge-core = { path = "../forge-core" }
hex.workspace = true
rmp-serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

